# 3enki

./: .dockerignore  .env.example  .gitignore  ANALISIS-CODIGO-VS-CONTEXTO.md  ANALISIS-CRITICO.txt  ANALISIS-FLUJOS-COMPLETO.md  CLAUDE.archive.md  CLAUDE.full.md  CLAUDE.md  CLAUDE.v1-archive.md  COMPREHENSIVE_TECHNICAL_ANALYSIS.md  CONTEXT.md  CONTEXT_UI.md  CREATE_PR.md  Dockerfile  INSTALL.md  INVENTARIO-SISTEMA.json  MODULOS_PSEUDOCODIGO_OOP.md  PLAN-config-system.md  PLAN_ESCANDALLO_V2.md  PLAN_ESCANDALLO_V2_SIMPLE.md  PORT_MANAGEMENT_SUMMARY.md  PR_ALIGNMENT_FIXES.md  PR_DESCRIPTION.md  PR_SUMMARY.md  PUERTOS.md  Paco.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_0.5.0.md  SESSION-ANALYSIS-SUMMARY.md  STATUS.md  SUMMARY.md  SYSTEM-ANALYSIS.md  TEMPLATE_API.md  TEMPLATE_EVENTOS.md  TEMPLATE_MODULO.md  TEMPLATE_UI.md  UI-SCRATCH-BLOCKS.json  UI_IMPLEMENTATION_SUMMARY.md  (+26 more)
arquitectura/: ESP32_ACTION_PLAN.md  README.md  agent-bridge.json  agent-manager.json  agentes-tools.json  ai-agent-framework.json  ai-gateway.json  chat-ai-bridge.json  chat-flow.json  chat-session.json  conversation-routing.json  conversation-routing.md  esp32-dev.json  esp32-flasher.json  esp32-modules-analysis.md  eventos.json  firmware-builder.json  firmware-manager.json  index.json  mensaje-rico.json  plan-agentes-cartas.json  recetas.json
auto-ui/: ALIGNMENT_FIXES.md  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  TEMPLATES_SCRIPTS_GUIDE.md  V2_STANDARDIZATION.md
blueprints/: _schema.yaml  _template.yaml  menu-generator-screen.yaml  mobile-chat-screen.yaml  selector-panel.yaml  tareas.yaml  ui-designer.yaml
cli/: client.js  enki-esp32.js  index.js
config/: capabilities.json  port-ranges.js  services.js
contexto/: SYSTEM-ANALYSIS.md  UI-SYSTEM.md  ai-gateway.json  analisis-project-manager.json  arquitectura-proyectos.json  blueprints-features.json  bot-agent-architecture.json  carta-digital.json  cartas-ecosystem.json  catalogo-servicios.json  certificate-authority.json  chat-refactoring.json  conversacion.json  credentials.json  document-processor.json  eventos-dominio.json  facturas.json  flow-builder-prompt.json  flow-engine.json  gateways-mqtt.json  handlers.json  index.json  iot-modules.json  learning.json  lecciones-aprendidas-flow-engine.json  mejoras-pendientes.json  modules.json  mqtt-request-response.md  mqtt.json  pantallas-cocina.json  perifericos.json  pizzepos.json  project-composition.json  providers.json  refactor-plop.json  scheduler.json  services.json  skills.json  system.json  templates.json  (+2 more)
core/: README.md  constants.js  handler-loader.js  handler-store.js  hooks.js  message-sanitizer.js  runtime-blueprint.js  service-executor.js
deployment/: deploy.sh  reconcile.js  termux-deploy.sh  termux-servers.conf.example  vps-setup.sh  vps.manifest.js
design-system/: generate.js  tokens.json
docker/: README.md  validate.sh
docs/: AI_AGENTS_ARCHITECTURE.md  AI_TOOLS_REFERENCE.md  ANALISIS-FLUJOS-MQTT.md  ANALISIS_EVENTOS_CON_CONTEXTO.md  ANALYSIS_PLOP_BLUEPRINTS.md  API_FLOW_DIAGRAM.md  API_SYSTEM.md  ARCHITECTURAL_CHANGES.md  ARCHITECTURE_FINAL.md  ARQUITECTURA_COMPOSICION_PROYECTOS.md  ARQUITECTURA_CONTEXTO_AGENTES.md  ARQUITECTURA_MULTI_DISCIPLINA.md  AUTO_UI_CONTEXT.md  CODE-RULES.md  CONTEXT_CHAT_AI.md  CONTEXT_POS.md  CORE_DEFINITION.md  DASHBOARD_GUIDE.md  FLUJOS_DETALLADOS.md  FLUJOS_FRASE_MOTIVADORA.md  GUIA_CREAR_MODULO.md  GUIA_EVENT_BUS.md  GUIA_HOOKS.md  GUIA_TESTING.md  HANDLER_ARCHITECTURE.md  IMPLEMENTACION_ESTANDARES_VISUALES.md  MODULE_GENERATOR.md  NETWORK_DEPLOYMENT.md  PATTERNS_API_UI.md  PLAN-AI-AGENTS.md  PLAN-BOT-MANAGER.md  PLAN-CHAT-INTEGRATION.md  PLAN-SERVICES-IMPLEMENTATION.md  PLAN-SYSTEM-INSPECTOR.md  PLAN-UIHANDLER-UNIFICADO.md  PLAN_COMPOSICION_PROYECTOS.md  QUICK_START.md  README.md  REFACTOR-EVENT-DRIVEN-FS.md  SECURITY_ARCHITECTURE.md  (+14 more)
enki-sense/: Cargo.toml  README.md
enki-sense/crates/motor-oido/: Cargo.toml  get-models.sh
enki-sense/crates/motor-oido/src/: main.rs  transcribe.rs
enki-sense/crates/motor-ojo/: Cargo.toml
enki-sense/crates/motor-ojo/src/: main.rs  render.rs
enki-sense/crates/motor-sonido/: Cargo.toml
enki-sense/crates/motor-sonido/src/: analyze.rs  main.rs
enki-sense/crates/motor-traduce/: Cargo.toml  get-models.sh
enki-sense/crates/motor-traduce/src/: main.rs  translate.rs
enki-sense/crates/motor-trazo/: Cargo.toml
enki-sense/crates/motor-trazo/src/: geometry.rs  main.rs
enki-sense/crates/motor-voz/: Cargo.toml  get-models.sh
enki-sense/crates/motor-voz/src/: main.rs  speak.rs
enki-sense/deployment/systemd/: motor-oido.service  motor-ojo.service  motor-sonido.service  motor-traduce.service  motor-trazo.service  motor-voz.service
flows/: factura.json
frontend/: DISEÑO-UI.md  README.md  package.json  svelte.config.js  tailwind-migration-report.json  tailwind.config.js  vite.config.js
graph/: README.md  REPORT.md  build-graph.js  graph-data.js  graph.json  index.html
handlers/: _ejemplo.js  _router-telegram-completo.js  _router-telegram-ejemplo.js  aprendizaje-consulta.js  cmd-ocr.js  (+39 more)
modules/esp32-dev/templates/esp32-p4-cocina/src/: CMakeLists.txt  config_mode.cpp  config_mode.h  display.cpp  display.h  main.cpp  mqtt_client.cpp  mqtt_client.h  nvstorage.cpp  nvstorage.h  trabajo_mode.cpp  trabajo_mode.h  webview.cpp  webview.h  wifi_manager.cpp  wifi_manager.h
(+3722 files in other folders)
