# enki-sense — los sentidos locales de Enki (Rust nativo, cero nube).
# Workspace: un crate por motor. Primero motor-ojo (render). Los demás (voz,
# oido, traduce, sonido) entran como crates hermanos con el mismo molde.
[workspace]
resolver = "2"
members = ["crates/motor-ojo", "crates/motor-traduce", "crates/motor-oido", "crates/motor-sonido"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["enki"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

# candle es lento en debug puro; optimizamos SOLO las dependencias (mi código
# sigue debug, compila rápido). Inferencia usable sin un release completo.
[profile.dev.package."*"]
opt-level = 3
