[package]
name = "motor-oido"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Órgano de TRANSCRIPCIÓN de enki-sense: audio → texto (candle-whisper), local."

[[bin]]
name = "motor-oido"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

anyhow = "1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hound = "3"
byteorder = "1"
