[package]
name = "motor-ojo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Órgano de RENDER de enki-sense: datos/markup → SVG · PDF · imagen, local (resvg/usvg/svg2pdf)."

[[bin]]
name = "motor-ojo"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# El corazón del render — todo Rust puro (Linebender/typst), sin Chromium.
# Versiones ALINEADAS: svg2pdf 0.12 fija usvg 0.43 → resvg 0.43 también usa 0.43,
# así hay UN solo usvg::Tree en el grafo (un parseo sirve para raster y para PDF).
usvg = "0.43"      # parse + optimize SVG
resvg = "0.43"     # SVG → raster (tiny-skia)
tiny-skia = "0.11" # pixmap / PNG encode
svg2pdf = "0.12"   # SVG → PDF
