[package]
name = "motor-sonido"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Perceptor de PROSODIA de enki-sense: audio → features (energía/tono/ritmo), DSP puro, local."

[[bin]]
name = "motor-sonido"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
hound = "3"
