[package]
name = "motor-trazo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Perceptor de TRAZO de enki-sense: trazos de canvas → geometría (línea/círculo/rectángulo…), geometría pura, local, sin modelo."

[[bin]]
name = "motor-trazo"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
