[package]
name = "motor-voz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Órgano de VOZ de enki-sense: texto → audio hablado (piper-rs, voces Piper ONNX), local."

[[bin]]
name = "motor-voz"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
hound = "3"
piper-rs = "0.2"
